--- a/ise-lab-strips.tex
+++ b/ise-lab-strips.tex
@@ -10,11 +10,11 @@
 %\documentclass[handout]{beamer}\mode<handout>{\usetheme{AMSBolognaFC}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{ise-lab-common}
-\usepackage{ise-lab-template}
+\usepackage{ise-lab-strips}
 % version
 \newcommand{\versionmajor}{0}
 \newcommand{\versionminor}{1}
-\newcommand{\versionpatch}{1}
+\newcommand{\versionpatch}{0}
 \newcommand{\version}{\versionmajor.\versionminor.\versionpatch}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[\currentLab{} -- Short Title]{
@@ -124,7 +124,7 @@
 	\scriptsize
 %	\footnotesize
 	\bibliographystyle{apalike-AMS}
-	\bibliography{ise-lab-template}
+	\bibliography{ise-lab-strips}
 \end{frame}
 %/////////
 
