feat: restore lesson about strips

--- a/ise-lab-strips.sty
+++ b/ise-lab-strips.sty
@@ -1,5 +1,10 @@
 % ISE numbering
-\labN{0}
+\labN{4}
+\usepackage[noend]{algpseudocode}
+
+\newcommand{\clicmd}[1]{\begin{center}\texttt{#1}\end{center}}
+\newcommand{\plil}[1]{\lstinline[style=Prolog-cool,basicstyle=\ttfamily]{#1}}
+
 
 \AtBeginSection[]
 {
