fix: update year

--- a/ise-lab-strips.tex
+++ b/ise-lab-strips.tex
@@ -14,7 +14,7 @@
 % version
 \newcommand{\versionmajor}{1}
 \newcommand{\versionminor}{0}
-\newcommand{\versionpatch}{1}
+\newcommand{\versionpatch}{2}
 \newcommand{\version}{\versionmajor.\versionminor.\versionpatch}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[\currentLab{} -- STRIPS in Prolog]{Planning in STRIPS with Prolog}
@@ -54,7 +54,7 @@
     \item clone the provided source from the following Git repository
     %
     \begin{center}
-        \uurl{https://gitlab.com/pika-lab/courses/ise/ay2122/lab-4}
+        \uurl{https://dvcs.apice.unibo.it/pika-lab/courses/ise/ay2223/lab-4}
     \end{center}
     %
     \item inspect the project structure
