fix: update slides to ay 2425

--- a/ise-lab-strips.tex
+++ b/ise-lab-strips.tex
@@ -54,7 +54,7 @@
     \item clone the provided source from the following Git repository
     %
     \begin{center}
-        \uurl{https://dvcs.apice.unibo.it/pika-lab/courses/ise/ay2324/lab-3}
+        \uurl{https://github.com/unibo-fc-isi-ise/code-strips}
     \end{center}
     %
     \item inspect the project structure
